# gait

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
gait/: __main__.py  diff.py  errors.py  main.py  reviewer.py  utils.py
gait/system_prompts/: default
tests/: conftest.py  test_diff.py  test_main.py  test_utils.py
tests/fixtures/: git_history.py
tests/snapshots/test_diff/test_create_patch/: add_patch  add_patch_diff_negative_unified
tests/snapshots/test_diff/test_merge_on_temp_branch/: feature_conflict_merge_on_master_patch  feature_merge_on_master_patch
tests/snapshots/test_diff/test_pr/: pr_conflict_patch
tests/snapshots/test_diff/test_push/: push_patch
