[tool.poetry]
name = "gait"
version = "0.1.0"
description = "Review your code changes in a git repository using an LLM"
authors = ["Can Taşlıçukur <can.taslicukur@ozu.edu.tr>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/can-taslicukur/gait"

[tool.poetry.scripts]
gait = "gait.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
gitpython = "^3.1.42"
openai = "^1.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ruff = "^0.2.2"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
lint.select = ["E", "W", "F", "I", "C", "B"]
